# noabspath

./: .gitignore  Cargo.toml  README.md  snapcraft.yaml
.github/workflows/: publish.yml  publish_snap.yml  publish_snap_stable.yml
src/: main.rs
src/checkabspath/: mod.rs
