[package]
name = "noabspath"
version = "0.1.3"
authors = ["William Droz <william.droz.ch@gmail.com>"]
edition = "2018"
repository = "https://github.com/wdroz/noabspath"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/wdroz/noabspath"
description = "Detect hard-coded absolute paths in codesbases"
keywords = ["tools", "CI", "CICD", "CLI"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.27.0"
glob = "~0.3.0"
rayon = "~1.3.1"
regex = "~1.3.9"
colored = "~1.9"
