[package]
name = "noabspath"
version = "1.0.1"
authors = ["William Droz <william.droz.ch@gmail.com>"]
edition = "2018"
repository = "https://github.com/wdroz/noabspath"
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/wdroz/noabspath"
description = "Detect hard-coded absolute paths in codesbases"
keywords = ["tools", "CI", "CICD", "CLI"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.10", features = ["derive"] }
glob = "~0.3.0"
rayon = "~1.5.2"
regex = "~1.5.5"
colored = "~2.0.0"
wildmatch = "~2.1.0"
